--- a/testimonial.html
+++ b/testimonial.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
+
+    
     <head>
         <meta charset="utf-8">
-        <title>Global Quality Care</title>
+        <title>Global Quality ChildCare - Testimonials</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -54,18 +57,18 @@
             </div>
             <div class="container px-0">
                 <nav class="navbar navbar-light navbar-expand-xl py-3">
-                    <a href="index.html" class="navbar-brand"><h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> Care</h1></a>
+                    <a href="index.html" class="navbar-brand"><h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> ChildCare</h1></a>
                     <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-primary"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav mx-auto">
-                            <a href="index.html" class="nav-item nav-link ">Home</a>
+                            <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <a href="service.html" class="nav-item nav-link">Services</a>
                             <a href="program.html" class="nav-item nav-link">Tuition</a>
-                            <a href="event.html" class="nav-item nav-link">Visit Us</a>
-                            <a href="testimonial.html" class="nav-item nav-link active">Testimonials</a>
+                            <a href="event.html" class="nav-item nav-link">Tour</a>
+                            <a href="testimonial.html" class="nav-item nav-link">Testimonials</a>
 
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
@@ -94,6 +97,7 @@
 
 
 
+
         
         <!-- Page Header Start -->
         <div class="container-fluid page-header py-5 wow fadeIn" data-wow-delay="0.1s">
@@ -117,7 +121,7 @@
             <div class="container py-5">
                 <div class="mx-auto text-center wow fadeIn" data-wow-delay="0.1s" style="max-width: 700px;">
                     <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">Our Testimonials</h4>
-                    <h1 class="mb-5 display-3">Parents Say About Us</h1>
+                    <h1 class="mb-5 display-3">What Parents Say About Us</h1>
                 </div>
                 <div class="owl-carousel testimonial-carousel wow fadeIn" data-wow-delay="0.3s">
                     <div class="testimonial-item img-border-radius bg-light border border-primary p-4">
@@ -372,7 +376,7 @@
             <div class="row g-5">
                 <div class="col-md-6 col-lg-4 col-xl-3">
                     <div class="footer-item">
-                        <h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> Care</h1></a>
+                        <h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> ChildCare</h1></a>
                         <p class="mb-4">Discover excellence in every aspect of our services, where compassion meets innovation, and where your health and happiness are our top priorities.</p>
 
                     </div>
