--- a/service.html
+++ b/service.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
+
+    
     <head>
         <meta charset="utf-8">
-        <title>Global Quality Care</title>
+        <title>Global Quality ChildCare - what we offer</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -34,8 +37,8 @@
 
     <body>
 
-         <!-- Spinner Start -->
-         <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50  d-flex align-items-center justify-content-center">
+        <!-- Spinner Start -->
+        <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50  d-flex align-items-center justify-content-center">
             <div class="spinner-grow text-primary" role="status"></div>
         </div>
         <!-- Spinner End -->
@@ -54,22 +57,20 @@
             </div>
             <div class="container px-0">
                 <nav class="navbar navbar-light navbar-expand-xl py-3">
-                    <a href="index.html" class="navbar-brand"><h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> Care</h1></a>
+                    <a href="index.html" class="navbar-brand"><h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> ChildCare</h1></a>
                     <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-primary"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
-                        <div class="collapse navbar-collapse" id="navbarCollapse">
-                            <div class="navbar-nav mx-auto">
-                                <a href="index.html" class="nav-item nav-link ">Home</a>
-                                <a href="about.html" class="nav-item nav-link">About</a>
-                                <a href="service.html" class="nav-item nav-link active">Services</a>
-                                <a href="program.html" class="nav-item nav-link ">Tuition</a>
-                                <a href="event.html" class="nav-item nav-link">Visit Us</a>
-                                <a href="testimonial.html" class="nav-item nav-link">Testimonials</a>
+                        <div class="navbar-nav mx-auto">
+                            <a href="index.html" class="nav-item nav-link active">Home</a>
+                            <a href="about.html" class="nav-item nav-link">About</a>
+                            <a href="service.html" class="nav-item nav-link">Services</a>
+                            <a href="program.html" class="nav-item nav-link">Tuition</a>
+                            <a href="event.html" class="nav-item nav-link">Tour</a>
+                            <a href="testimonial.html" class="nav-item nav-link">Testimonials</a>
 
-                                <a href="contact.html" class="nav-item nav-link">Contact</a>
-                            </div>
+                            <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                         <div class="d-flex me-4">
                             <div id="phone-tada" class="d-flex align-items-center justify-content-center">
@@ -92,6 +93,7 @@
             </div>
         </div>
         <!-- Navbar End -->
+
 
 
 
@@ -174,7 +176,7 @@
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-4 col-xl-3">
                         <div class="footer-item">
-                            <h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> Care</h1></a>
+                            <h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> ChildCare</h1></a>
                             <p class="mb-4">Discover excellence in every aspect of our services, where compassion meets innovation, and where your health and happiness are our top priorities.</p>
 
                         </div>
