--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <head>
         <meta charset="utf-8">
-        <title>Global Quality Care</title>
+        <title>Global Quality ChildCare</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -57,7 +57,7 @@
             </div>
             <div class="container px-0">
                 <nav class="navbar navbar-light navbar-expand-xl py-3">
-                    <a href="index.html" class="navbar-brand"><h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> Care</h1></a>
+                    <a href="index.html" class="navbar-brand"><h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> ChildCare</h1></a>
                     <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-primary"></span>
                     </button>
@@ -67,7 +67,7 @@
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <a href="service.html" class="nav-item nav-link">Services</a>
                             <a href="program.html" class="nav-item nav-link">Tuition</a>
-                            <a href="event.html" class="nav-item nav-link">Visit Us</a>
+                            <a href="event.html" class="nav-item nav-link">Tour</a>
                             <a href="testimonial.html" class="nav-item nav-link">Testimonials</a>
 
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -83,7 +83,7 @@
                             </div>
                             <div class="d-flex flex-column pe-3 border-end border-primary">
                                 <span class="text-primary">Have any questions?</span>
-                                <a href="#"><span class="text-secondary"> (240) - 505 - 8540
+                                <a href="#"><span class="text-secondary"> (240) - 331 - 8941
 
                                 </span></a>
                             </div>
@@ -104,7 +104,7 @@
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-lg-7 col-md-12">
-                        <h1 class="mb-3" style="color: #FFFF00; font-weight: bold;">Global Quality Care, Bright Futures</h1>
+                        <h1 class="mb-3" style="color: #FFFF00; font-weight: bold;">Global Quality ChildCare</h1>
                         <h1 class="mb-5 display-1 text-white">The Best Day Care For Your Kids</h1>
                         <a href="event.html" class="btn btn-primary px-4 py-3 px-md-5  me-4 btn-border-radius">Schedule A Tour</a>
                         <a href="about.html" class="btn btn-primary px-4 py-3 px-md-5 btn-border-radius">Learn More</a>
@@ -131,7 +131,7 @@
                     <div class="col-lg-7 wow fadeIn" data-wow-delay="0.3s">
                         <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">About Us</h4>
                         <h1 class="text-dark mb-4 display-5">We Build Bright Futute For Your Children</h1>
-                        <p class="text-dark mb-4">At Global Quality Childcare Services, we believe in nurturing the potential of every child in a safe, engaging, and educational environment. Our dedicated team of experienced childcare professionals is committed to providing the highest quality care, ensuring that your child's early years are filled with joy, learning, and growth.
+                        <p class="text-dark mb-4">At Global Quality Childcare Services, we believe in nurturing the potential of every child in a safe, engaging, and educational environment. Our dedicated team of experienced childcare professionals is committed to providing the highest quality childcare, ensuring that your child's early years are filled with joy, learning, and growth.
 
 
                         </p>
@@ -310,7 +310,6 @@
         <div class="container-fluid program  py-5">
             <div class="container py-5">
                 <div class="mx-auto text-center wow fadeIn" data-wow-delay="0.1s" style="max-width: 700px;">
-                    <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">Our Tution</h4>
                     <h1 class="mb-5 display-3">Part TIme</h1>
                 </div>
                 <div class="row g-5 justify-content-center">
@@ -382,7 +381,7 @@
         <div class="container-fluid events py-5 bg-light">
             <div class="container py-5">
                 <div class="mx-auto text-center wow fadeIn" data-wow-delay="0.1s" style="max-width: 700px;">
-                    <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">Come Vist Us</h4>
+                    <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">Come Visit Us</h4>
                     <h1 class="mb-5 display-3">Schedule A Tour</h1>
                 </div>
          
@@ -406,7 +405,7 @@
             <div class="container py-5">
                 <div class="mx-auto text-center wow fadeIn" data-wow-delay="0.1s" style="max-width: 700px;">
                     <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">Our Testimonials</h4>
-                    <h1 class="mb-5 display-3">Parents Say About Us</h1>
+                    <h1 class="mb-5 display-3">What Parents Say About Us</h1>
                 </div>
                 <div class="owl-carousel testimonial-carousel wow fadeIn" data-wow-delay="0.3s">
                     <div class="testimonial-item img-border-radius bg-light border border-primary p-4">
@@ -661,7 +660,7 @@
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-4 col-xl-3">
                         <div class="footer-item">
-                            <h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> Care</h1></a>
+                            <h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> ChildCare</h1></a>
                             <p class="mb-4">Discover excellence in every aspect of our services, where compassion meets innovation, and where your health and happiness are our top priorities.</p>
 
                         </div>
@@ -694,7 +693,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-3">
                         <div class="footer-item">
-                            <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">OUR GALLARY</h4>
+                            <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">OUR GALLERY</h4>
                             <div class="row g-3">
                                 <div class="col-4">
                                     <div class="footer-galary-img rounded-circle border border-primary">
