--- a/event.html
+++ b/event.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
+
+    
     <head>
         <meta charset="utf-8">
-        <title>Global Quality Care</title>
+        <title>Global Quality ChildCare - Visit Us</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -54,19 +57,19 @@
             </div>
             <div class="container px-0">
                 <nav class="navbar navbar-light navbar-expand-xl py-3">
-                    <a href="index.html" class="navbar-brand"><h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> Care</h1></a>
+                    <a href="index.html" class="navbar-brand"><h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> ChildCare</h1></a>
                     <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-primary"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav mx-auto">
-                            <a href="index.html" class="nav-item nav-link">Home</a>
+                            <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <a href="service.html" class="nav-item nav-link">Services</a>
-                            <a href="program.html" class="nav-item nav-link ">Tuition</a>
-                            <a href="event.html" class="nav-item nav-link active">Visit Us</a>
-                            <a href="testimonial.html" class="nav-item nav-link ">Testimonials</a>
-    
+                            <a href="program.html" class="nav-item nav-link">Tuition</a>
+                            <a href="event.html" class="nav-item nav-link">Tour</a>
+                            <a href="testimonial.html" class="nav-item nav-link">Testimonials</a>
+
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                         <div class="d-flex me-4">
@@ -80,7 +83,8 @@
                             </div>
                             <div class="d-flex flex-column pe-3 border-end border-primary">
                                 <span class="text-primary">Have any questions?</span>
-                                <a href="#"><span class="text-secondary"> (240) - 331 - 8941
+                                <a href="#"><span class="text-secondary"> (240) - 505 - 8540
+
                                 </span></a>
                             </div>
                         </div>
@@ -164,7 +168,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-3">
                         <div class="footer-item">
-                            <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">OUR GALLARY</h4>
+                            <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">OUR GALLERY</h4>
                             <div class="row g-3">
                                 <div class="col-4">
                                     <div class="footer-galary-img rounded-circle border border-primary">
