--- a/contact.html
+++ b/contact.html
@@ -164,7 +164,7 @@
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-4 col-xl-3">
                         <div class="footer-item">
-                            <h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> Care</h1></a>
+                            <h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> ChildCare</h1></a>
                             <p class="mb-4">Discover excellence in every aspect of our services, where compassion meets innovation, and where your health and happiness are our top priorities.</p>
 
                         </div>
@@ -196,7 +196,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-3">
                         <div class="footer-item">
-                            <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">OUR GALLARY</h4>
+                            <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">OUR GALLERY</h4>
                             <div class="row g-3">
                                 <div class="col-4">
                                     <div class="footer-galary-img rounded-circle border border-primary">
