--- a/about.html
+++ b/about.html
@@ -106,32 +106,78 @@
 
 
 <!-- About Section -->
-<!-- About Section -->
 <section class="container-fluid py-5 about bg-light">
     <div class="container py-5">
+        <!-- Header -->
         <div class="row">
-            <div class="col-lg-12 wow fadeIn" data-wow-delay="0.3s">
-                <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">About Quality Child Care</h4>
+            <div class="col-lg-12 text-center wow fadeIn" data-wow-delay="0.3s">
+                <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">About Global Quality ChildCare</h4>
                 <h1 class="text-dark mb-4 display-5">We Build Bright Futures for Your Children</h1>
                 <p class="text-dark mb-4">Welcome to Quality Child Care, a trusted name in providing exceptional child care services. With a rich history dating back to the early 2000s, we have been dedicated to nurturing and educating young minds, ensuring a foundation for lifelong success.</p>
+            </div>
+        </div>
 
-                <div class="row mb-4">
-                    <div class="col-lg-6">
-                        <h6 class="mb-3"><i class="fas fa-check-circle me-2"></i>Experienced and Certified Staff: Our team consists of certified child care professionals with years of experience, ensuring your child is in safe and capable hands.</h6>
-                        <h6 class="mb-3"><i class="fas fa-check-circle me-2 text-primary"></i>Comprehensive Curriculum: We offer a well-rounded curriculum that includes age-appropriate activities, language development, STEM education, and creative arts.</h6>
-                        <h6 class="mb-3"><i class="fas fa-check-circle me-2 text-secondary"></i>Safe and Stimulating Environment: Our facilities are equipped with the latest safety measures and designed to inspire curiosity, creativity, and a love for learning.</h6>
-                        <h6 class="mb-3"><i class="fas fa-check-circle me-2"></i>Parental Involvement: We value the partnership with parents and encourage open communication. Regular updates, parent-teacher conferences, and involvement in special events are all part of our commitment.</h6>
+        <!-- Key Features -->
+        <div class="row">
+            <div class="col-lg-6 wow fadeIn" data-wow-delay="0.3s">
+                <h5 class="text-dark mb-4">Why Choose Us</h5>
+                <ul class="list-unstyled">
+                    <li class="mb-3"><i class="fas fa-check-circle me-2 text-primary"></i><strong>Experienced and Certified Staff:</strong> Our team consists of certified child care professionals with years of experience, ensuring your child is in safe and capable hands.</li>
+                    <li class="mb-3"><i class="fas fa-check-circle me-2 text-secondary"></i><strong>Comprehensive Curriculum:</strong> We offer a well-rounded curriculum that includes age-appropriate activities, language development, STEM education, and creative arts.</li>
+                    <li class="mb-3"><i class="fas fa-check-circle me-2 text-success"></i><strong>Safe and Stimulating Environment:</strong> Our facilities are equipped with the latest safety measures and designed to inspire curiosity, creativity, and a love for learning.</li>
+                    <li class="mb-3"><i class="fas fa-check-circle me-2 text-warning"></i><strong>Parental Involvement:</strong> We value the partnership with parents and encourage open communication. Regular updates, parent-teacher conferences, and involvement in special events are all part of our commitment.</li>
+                </ul>
+            </div>
+            <div class="col-lg-6 wow fadeIn" data-wow-delay="0.6s">
+                <ul class="list-unstyled mt-lg-5 pt-lg-3">
+                    <li class="mb-3"><i class="fas fa-check-circle me-2 text-info"></i><strong>Health and Nutrition:</strong> We provide nutritious meals and snacks that cater to the dietary needs of growing children, ensuring they have the energy to learn and play.</li>
+                    <li class="mb-3"><i class="fas fa-check-circle me-2 text-danger"></i><strong>Flexible Scheduling:</strong> Our programs offer flexible scheduling options to accommodate the busy lives of parents, including full-time, part-time, and after-school care.</li>
+                    <li class="mb-3"><i class="fas fa-check-circle me-2 text-primary"></i><strong>Play-Based Learning:</strong> We believe in the power of play and incorporate play-based learning into our curriculum to foster social, emotional, and cognitive development.</li>
+                    <li class="mb-3"><i class="fas fa-check-circle me-2 text-secondary"></i><strong>Community Engagement:</strong> We actively participate in community events and encourage families to join us in various community-building activities.</li>
+                </ul>
+            </div>
+        </div>
+
+        <br>
+        <br>
+
+        <!-- Leadership Section -->
+        <div class="row">
+            <div class="col-lg-12 text-center wow fadeIn" data-wow-delay="0.9s">
+                <h1 class="text-dark mb-4 display-5">Meet Our Leadership  </h1>
+
+            </div>
+            <div class="col-lg-6 wow fadeIn" data-wow-delay="1.2s">
+                <div class="card bg-light mb-4">
+                    <div class="card-body">
+                        <h6 class="card-title text-dark"><strong>Zewditu Azal</strong></h6>
+                        <p class="card-text text-dark">With more than a decade of experience in the child care industry, Zewditu is the main provider at Quality Child Care. Her dedication to creating a nurturing and educational environment has been instrumental in shaping the future of countless children.</p>
                     </div>
                 </div>
+            </div>
+            <div class="col-lg-6 wow fadeIn" data-wow-delay="1.5s">
+                <div class="card bg-light mb-4">
+                    <div class="card-body">
+                        <h6 class="card-title text-dark"><strong>Dr. Melesse</strong></h6>
+                        <p class="card-text text-dark">As the co-provider and CEO and founder of <a href="http://fenotetrainingacademy.me" target="_blank">Fenote Training Academy</a>, Dr. Melesse is an emergency care trainer who trains child care providers. His expertise ensures that our staff is well-prepared to handle any situation, providing an added layer of safety and security for your children.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-                <p class="mb-4" style="color: rgb(3, 3, 157); font-size:medium;">
+        <!-- Licensing and Accreditation -->
+        <div class="row">
+            <div class="col-lg-12 text-center wow fadeIn" data-wow-delay="1.8s">
+                <div class="alert alert-primary" role="alert">
                     <strong>Licensed and Accredited:</strong> Quality Child Care is fully licensed and accredited by the Maryland State Department of Education (MSDE). Our commitment to maintaining the highest standards, as recognized by MSDE, ensures that your child receives quality care and education in a regulated environment.
-                </p>
-                
-                <p style="color:rgb(3, 3, 157); font-size:medium;">
- Thank you for considering Quality Child Care for your child's early education journey. We look forward to welcoming your family into our community and providing a nurturing environment where your child can learn, grow, and thrive.
-                </p>
-                
+                </div>
+            </div>
+        </div>
+
+        <!-- Closing Statement -->
+        <div class="row">
+            <div class="col-lg-12 text-center wow fadeIn" data-wow-delay="2.1s">
+                <p class="text-dark mb-4">Thank you for considering Quality Child Care for your child's early education journey. We look forward to welcoming your family into our community and providing a nurturing environment where your child can learn, grow, and thrive.</p>
             </div>
         </div>
     </div>
@@ -147,7 +193,7 @@
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-4 col-xl-3">
                         <div class="footer-item">
-                            <h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> Care</h1></a>
+                            <h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> ChildCare</h1></a>
                             <p class="mb-4">Discover excellence in every aspect of our services, where compassion meets innovation, and where your health and happiness are our top priorities.</p>
 
                         </div>
