update daycare with meta data

--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Global Quality Care</title>
+        <title>Global Quality ChildCare</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="" name="keywords">
-        <meta content="" name="description">
+        <meta content="Learn more about Global Quality Care, our values, our staff, and our commitment to providing top-notch childcare services." name="description">
+        <meta content="about daycare, childcare staff, childcare values, quality childcare, daycare services" name="keywords">
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -54,7 +54,7 @@
             </div>
             <div class="container px-0">
                 <nav class="navbar navbar-light navbar-expand-xl py-3">
-                    <a href="index.html" class="navbar-brand"><h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> Care</h1></a>
+                    <a href="index.html" class="navbar-brand"><h1 class="text-primary display-6">Global <span class="text-secondary"> Quality</span> ChildCare</h1></a>
                     <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-primary"></span>
                     </button>
@@ -65,7 +65,7 @@
                                 <a href="about.html" class="nav-item nav-link active">About</a>
                                 <a href="service.html" class="nav-item nav-link">Services</a>
                                 <a href="program.html" class="nav-item nav-link">Tuition</a>
-                                <a href="event.html" class="nav-item nav-link">Visit Us</a>
+                                <a href="event.html" class="nav-item nav-link">Tour</a>
                                 <a href="testimonial.html" class="nav-item nav-link ">Testimonials</a>
    
                                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -95,7 +95,7 @@
         <!-- Page Header Start -->
         <div class="container-fluid page-header py-5 wow fadeIn" data-wow-delay="0.1s">
             <div class="container text-center py-5">
-                <h1 class="display-2 text-white mb-4">About Us</h1>
+                <h1 class="display-2 text-white mb-4">About Global Quality ChildCare</h1>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center mb-0">
                     </ol>
@@ -142,18 +142,21 @@
         <br>
 
         <!-- Leadership Section -->
+        <!-- Leadership Section -->
         <div class="row">
             <div class="col-lg-12 text-center wow fadeIn" data-wow-delay="0.9s">
-                <h1 class="text-dark mb-4 display-5">Meet Our Leadership  </h1>
-
+                <h1 class="text-dark mb-4 display-5">Meet Our Leadership</h1>
             </div>
             <div class="col-lg-6 wow fadeIn" data-wow-delay="1.2s">
                 <div class="card bg-light mb-4">
                     <div class="card-body">
                         <h6 class="card-title text-dark"><strong>Zewditu Azal</strong></h6>
-                        <p class="card-text text-dark">With more than a decade of experience in the child care industry, Zewditu is the main provider at Quality Child Care. Her dedication to creating a nurturing and educational environment has been instrumental in shaping the future of countless children.</p>
+                        <p class="card-text text-dark">Greetings parents! I'm Zewditu, and I'm here to help you with my extensive experience and sincere love of childcare. My upbringing in Ethiopia imbued me with principles of dignity, affection, and self-control that encompass all backgrounds, sizes, colors, classes, and statuses. Being a mother of four beautiful kids and a devout Christian, I know how important it is to raise and care for children. I have devoted my life to creating an environment where kids may grow up secure, loved, and challenged. I have a natural passion for babies and make sure they are comfortable and happy by attending to all of their requirements, including feeding, changing, and napping. I do enrichment activities with toddlers, such as singing and playing games. You can trust me to provide a safe and secure environment for your children!</p>
                     </div>
                 </div>
+            </div>
+            <div class="col-lg-6 wow fadeIn" data-wow-delay="1.5s">
+                <img src="path_to_zewditu_image.jpg" alt="Zewditu Azal" class="img-fluid rounded-circle">
             </div>
             <div class="col-lg-6 wow fadeIn" data-wow-delay="1.5s">
                 <div class="card bg-light mb-4">
@@ -169,7 +172,7 @@
         <div class="row">
             <div class="col-lg-12 text-center wow fadeIn" data-wow-delay="1.8s">
                 <div class="alert alert-primary" role="alert">
-                    <strong>Licensed and Accredited:</strong> Quality Child Care is fully licensed and accredited by the Maryland State Department of Education (MSDE). Our commitment to maintaining the highest standards, as recognized by MSDE, ensures that your child receives quality care and education in a regulated environment.
+                    <strong>Licensed and Accredited:</strong> Global Quality Child Care is fully licensed and accredited by the Maryland State Department of Education (MSDE). Our commitment to maintaining the highest standards, as recognized by MSDE, ensures that your child receives quality care and education in a regulated environment.
                 </div>
             </div>
         </div>
@@ -177,7 +180,7 @@
         <!-- Closing Statement -->
         <div class="row">
             <div class="col-lg-12 text-center wow fadeIn" data-wow-delay="2.1s">
-                <p class="text-dark mb-4">Thank you for considering Quality Child Care for your child's early education journey. We look forward to welcoming your family into our community and providing a nurturing environment where your child can learn, grow, and thrive.</p>
+                <p class="text-dark mb-4">Thank you for considering Global Quality Child Care for your child's early education journey. We look forward to welcoming your family into our community and providing a nurturing environment where your child can learn, grow, and thrive.</p>
             </div>
         </div>
     </div>
@@ -229,7 +232,7 @@
                             <div class="row g-3">
                                 <div class="col-4">
                                     <div class="footer-galary-img rounded-circle border border-primary">
-                                        <img src="img/galary-1.jpg" class="img-fluid rounded-circle p-2" alt="">
+                                        <img src="img/galary-1.jpg" class="img-fluid rounded-circle p-2" alt="Child playing with educational toys">
                                     </div>
                                </div>
                                <div class="col-4">
