--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-
-    
     <head>
         <meta charset="utf-8">
         <title>Global Quality ChildCare</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="" name="keywords">
-        <meta content="" name="description">
-
+        <meta content="childcare, daycare, early education, Silver Spring daycare, child development" name="keywords">
+        <meta content="High-quality childcare and early education services in Silver Spring, MD. Enroll your child today for a better future." name="description">
+        <meta name="keywords" content="childcare near me, daycare near Silver Spring, childcare services in Maryland, Virginia daycare, Rockville childcare, Columbia daycare, Montgomery County childcare, PG County daycare, Howard County childcare, White Oak daycare, trusted home daycare">
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,8 +27,6 @@
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
-
-        
 
     </head>
 
@@ -770,4 +765,25 @@
     <script src="js/main.js"></script>
     </body>
 
+
+    <div class="seo-hidden" style="position:absolute; overflow:hidden; clip:rect(0 0 0 0); height:1px; width:1px; margin:-1px; padding:0; border:0;">
+        <p>Explore trusted home daycare services near Silver Spring, Maryland, including areas like Virginia, Rockville, Columbia, Montgomery County, PG County, Howard County, and White Oak.</p>
+    </div>
 </html>
+
+<script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "DayCare",
+      "name": "Global Quality ChildCare",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "1904 Carters Grove",
+        "addressLocality": "Silver Spring",
+        "addressRegion": "MD",
+        "postalCode": "20904"
+      },
+      "telephone": "+0123456789",
+      "url": "http://www.example.com"
+    }
+    </script>
