--- a/program.html
+++ b/program.html
@@ -107,150 +107,120 @@
 
         <!-- Page Header End -->
 
-
-        <!-- Programs Start -->
-        <div class="container-fluid program  py-5">
-            <div class="container py-5">
-                <div class="mx-auto text-center wow fadeIn" data-wow-delay="0.1s" style="max-width: 700px;">
-                    <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">Our Tution</h4>
-                    <h1 class="mb-5 display-3">Full Time </h1>
-                </div>
-                <div class="row g-5 justify-content-center">
-                    <div class="col-md-6 col-lg-6 col-xl-4 wow fadeIn" data-wow-delay="0.1s">
-                        <div class="program-item rounded">
-                            <div class="program-img position-relative">
-                                <div class="overflow-hidden img-border-radius">
-                                    <img src="img/infants.jpg" class="img-fluid w-100" alt="Image">
-                                </div>
-                                <div class="px-4 py-2 bg-primary text-white program-rate">$325.00</div>
-                            </div>
-                            <div class="program-text bg-white px-4 pb-3">
-                                <div class="program-text-inner">
-                                    <a href="#" class="h4">Infants</a>
-                                    <p class="mt-3 mb-0">3 months to 2 years. $325.00 per week.  </p>
-                                </div>
-                            </div>
-
-
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-6 col-xl-4 wow fadeIn" data-wow-delay="0.3s">
-                        <div class="program-item rounded">
-                            <div class="program-img position-relative">
-                                <div class="overflow-hidden img-border-radius">
-                                    <img src="img/program-2.jpg" class="img-fluid w-100" alt="Image">
-                                </div>
-                                <div class="px-4 py-2 bg-primary text-white program-rate">$300.00</div>
-                            </div>
-                            <div class="program-text bg-white px-4 pb-3">
-                                <div class="program-text-inner">
-                                    <a href="#" class="h4">Toddlers</a>
-                                    <p class="mt-3 mb-0">2 years to 3 years. $300.00 per week.
-
-
-                                    </p>
-                                </div>
-                            </div>
-
-
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-6 col-xl-4 wow fadeIn" data-wow-delay="0.5s">
-                        <div class="program-item rounded">
-                            <div class="program-img position-relative">
-                                <div class="overflow-hidden img-border-radius">
-                                    <img src="img/program-3.jpg" class="img-fluid w-100" alt="Image">
-                                </div>
-                                <div class="px-4 py-2 bg-primary text-white program-rate">$275.00</div>
-                            </div>
-                            <div class="program-text bg-white px-4 pb-3">
-                                <div class="program-text-inner">
-                                    <a href="#" class="h4">Pre-schoolers                                     </a>
-                                    <p class="mt-3 mb-0">3 years to 5 years. $275.00 per week</p>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-
-                </div> 
-            </div>
+<!-- Programs Start -->
+<div class="container-fluid program py-5">
+    <div class="container py-5">
+        <div class="mx-auto text-center wow fadeIn" data-wow-delay="0.1s" style="max-width: 700px;">
+            <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">Contact us for our Tuition Cost</h4>
+            <h1 class="mb-5 display-3">Full Time</h1>
         </div>
-
-
-
-
-
-
-
-        <div class="container-fluid program  py-5">
-            <div class="container py-5">
-                <div class="mx-auto text-center wow fadeIn" data-wow-delay="0.1s" style="max-width: 700px;">
-                    <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">Our Tution</h4>
-                    <h1 class="mb-5 display-3">Part TIme</h1>
+        <div class="row g-5 justify-content-center">
+            <div class="col-md-6 col-lg-6 col-xl-4 wow fadeIn" data-wow-delay="0.1s">
+                <div class="program-item rounded">
+                    <div class="program-img position-relative">
+                        <div class="overflow-hidden img-border-radius">
+                            <img src="img/infants.jpg" class="img-fluid w-100" alt="Image">
+                        </div>
+                    </div>
+                    <div class="program-text bg-white px-4 pb-3">
+                        <div class="program-text-inner">
+                            <a href="#" class="h4">Infants</a>
+                            <p class="mt-3 mb-0">3 months to 2 years</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="row g-5 justify-content-center">
-                    <div class="col-md-6 col-lg-6 col-xl-4 wow fadeIn" data-wow-delay="0.1s">
-                        <div class="program-item rounded">
-                            <div class="program-img position-relative">
-                                <div class="overflow-hidden img-border-radius">
-                                    <img src="img/infants.jpg" class="img-fluid w-100" alt="Image">
-                                </div>
-                                <div class="px-4 py-2 bg-primary text-white program-rate">$65.00</div>
-                            </div>
-                            <div class="program-text bg-white px-4 pb-3">
-                                <div class="program-text-inner">
-                                    <a href="#" class="h4">Infants</a>
-                                    <p class="mt-3 mb-0">3 months to 2 years. $65.00 per day.  </p>
-                                </div>
-                            </div>
-
-
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-6 col-xl-4 wow fadeIn" data-wow-delay="0.3s">
-                        <div class="program-item rounded">
-                            <div class="program-img position-relative">
-                                <div class="overflow-hidden img-border-radius">
-                                    <img src="img/program-2.jpg" class="img-fluid w-100" alt="Image">
-                                </div>
-                                <div class="px-4 py-2 bg-primary text-white program-rate">$65.00</div>
-                            </div>
-                            <div class="program-text bg-white px-4 pb-3">
-                                <div class="program-text-inner">
-                                    <a href="#" class="h4">Toddlers</a>
-                                    <p class="mt-3 mb-0">2 years to 3 years. $65.00 per day.
-
-
-                                    </p>
-                                </div>
-                            </div>
-
-
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-6 col-xl-4 wow fadeIn" data-wow-delay="0.5s">
-                        <div class="program-item rounded">
-                            <div class="program-img position-relative">
-                                <div class="overflow-hidden img-border-radius">
-                                    <img src="img/program-3.jpg" class="img-fluid w-100" alt="Image">
-                                </div>
-                                <div class="px-4 py-2 bg-primary text-white program-rate">$60.00</div>
-                            </div>
-                            <div class="program-text bg-white px-4 pb-3">
-                                <div class="program-text-inner">
-                                    <a href="#" class="h4">Pre-schoolers                                     </a>
-                                    <p class="mt-3 mb-0">3 years to 5 years. $60.00 per day. </p>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-
-                </div> 
             </div>
+            <div class="col-md-6 col-lg-6 col-xl-4 wow fadeIn" data-wow-delay="0.3s">
+                <div class="program-item rounded">
+                    <div class="program-img position-relative">
+                        <div class="overflow-hidden img-border-radius">
+                            <img src="img/program-2.jpg" class="img-fluid w-100" alt="Image">
+                        </div>
+                    </div>
+                    <div class="program-text bg-white px-4 pb-3">
+                        <div class="program-text-inner">
+                            <a href="#" class="h4">Toddlers</a>
+                            <p class="mt-3 mb-0">2 years to 3 years</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-6 col-xl-4 wow fadeIn" data-wow-delay="0.5s">
+                <div class="program-item rounded">
+                    <div class="program-img position-relative">
+                        <div class="overflow-hidden img-border-radius">
+                            <img src="img/program-3.jpg" class="img-fluid w-100" alt="Image">
+                        </div>
+                    </div>
+                    <div class="program-text bg-white px-4 pb-3">
+                        <div class="program-text-inner">
+                            <a href="#" class="h4">Pre-schoolers</a>
+                            <p class="mt-3 mb-0">3 years to 5 years</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> 
+    </div>
+</div>
+
+<div class="container-fluid program py-5">
+    <div class="container py-5">
+        <div class="mx-auto text-center wow fadeIn" data-wow-delay="0.1s" style="max-width: 700px;">
+            <h4 class="text-primary mb-4 border-bottom border-primary border-2 d-inline-block p-2 title-border-radius">Contact us for our Tuition Cost</h4>
+            <h1 class="mb-5 display-3">Part Time</h1>
         </div>
-        <!-- Program End -->
+        <div class="row g-5 justify-content-center">
+            <div class="col-md-6 col-lg-6 col-xl-4 wow fadeIn" data-wow-delay="0.1s">
+                <div class="program-item rounded">
+                    <div class="program-img position-relative">
+                        <div class="overflow-hidden img-border-radius">
+                            <img src="img/infants.jpg" class="img-fluid w-100" alt="Image">
+                        </div>
+                    </div>
+                    <div class="program-text bg-white px-4 pb-3">
+                        <div class="program-text-inner">
+                            <a href="#" class="h4">Infants</a>
+                            <p class="mt-3 mb-0">3 months to 2 years</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-6 col-xl-4 wow fadeIn" data-wow-delay="0.3s">
+                <div class="program-item rounded">
+                    <div class="program-img position-relative">
+                        <div class="overflow-hidden img-border-radius">
+                            <img src="img/program-2.jpg" class="img-fluid w-100" alt="Image">
+                        </div>
+                    </div>
+                    <div class="program-text bg-white px-4 pb-3">
+                        <div class="program-text-inner">
+                            <a href="#" class="h4">Toddlers</a>
+                            <p class="mt-3 mb-0">2 years to 3 years</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-6 col-xl-4 wow fadeIn" data-wow-delay="0.5s">
+                <div class="program-item rounded">
+                    <div class="program-img position-relative">
+                        <div class="overflow-hidden img-border-radius">
+                            <img src="img/program-3.jpg" class="img-fluid w-100" alt="Image">
+                        </div>
+                    </div>
+                    <div class="program-text bg-white px-4 pb-3">
+                        <div class="program-text-inner">
+                            <a href="#" class="h4">Pre-schoolers</a>
+                            <p class="mt-3 mb-0">3 years to 5 years</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> 
+    </div>
+</div>
+
+
 
 <!-- AFTER SCHOOL ACTIVITIES?  -->
 
