edit snack info

--- a/service.html
+++ b/service.html
@@ -132,12 +132,15 @@
                     <div class="service-content d-flex align-items-center justify-content-center p-4">
                         <div class="service-content-inner">
                             <div class="p-4"><i class="fas fa-apple-alt fa-6x text-primary"></i></div>
-                            <a href="#" class="h4">Healthy Snacks</a>
-                            <p class="my-3">Provide nutritious snacks to support your child's health and well-being during their time at our child care center.</p>
+                            <a href="#" class="h4">Healthy Meals & Snacks</a>
+                            <p class="my-3">
+                                We provide nutritious <strong>breakfast</strong>, <strong>lunch</strong>, and <strong>PM snacks</strong> to support your child's health and well-being during their time at our child care center.
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
+            
             <div class="col-md-6 col-lg-6 col-xl-3 wow fadeIn" data-wow-delay="0.5s">
                 <div class="text-center border-primary border bg-white service-item">
                     <div class="service-content d-flex align-items-center justify-content-center p-4">
